--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,10 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Nano Banana — Image-to-Image</title>
 
-  <!-- CSP that allows inline JS + the endpoints we call -->
   <meta http-equiv="Content-Security-Policy"
         content="default-src 'self';
                  img-src * data: blob:;
-                 connect-src 'self' https://api.kie.ai https://kieai.redpandaai.co https://hook.make.com;
+                 connect-src 'self' https://api.kie.ai https://kieai.redpandaai.co https://hook.make.com https://transfer.sh;
                  style-src 'self' 'unsafe-inline';
                  script-src 'self' 'unsafe-inline'">
 
@@ -31,10 +30,6 @@
   </style>
 </head>
 <body>
-  <noscript><div style="background:#ffdbdb;color:#300;padding:10px;border-radius:8px">
-    JavaScript is disabled. The Run button won’t work.
-  </div></noscript>
-
   <div class="wrap">
     <h1>Nano Banana — Image-to-Image</h1>
 
@@ -58,9 +53,7 @@
           <option value="jpeg">JPEG</option>
         </select>
         <div style="height:14px"></div>
-        <!-- Inline click calls the handler; no alert -->
-        <button id="runBtn" type="button"
-                onclick="window.__run && window.__run()">Run</button>
+        <button id="runBtn" type="button" onclick="window.__run && window.__run()">Run</button>
       </div>
     </div>
 
@@ -71,7 +64,6 @@
   </div>
 
 <script>
-/* ===================== DEBUG & ELEMENTS ===================== */
 const dbg = document.getElementById('debug');
 const log = (...a) => { dbg.textContent += '\n' + a.map(x=>typeof x==='string'?x:JSON.stringify(x,null,2)).join(' '); };
 
@@ -84,9 +76,6 @@ const promptEl= document.getElementById('prompt');
 const formatEl= document.getElementById('format');
 const runBtn  = document.getElementById('runBtn');
 
-log('BOOT: elements wired.');
-
-/* ===================== THUMBNAILS ===================== */
 filesEl.addEventListener('change', () => {
   thumbsEl.innerHTML = '';
   [...filesEl.files].slice(0,4).forEach(f=>{
@@ -97,7 +86,7 @@ filesEl.addEventListener('change', () => {
   });
 });
 
-/* ===================== HELPERS ===================== */
+// Fallback helpers (kept from your working flow)
 async function fileToBase64(file){
   const ab = await file.arrayBuffer();
   let bin=''; const bytes=new Uint8Array(ab), step=0x8000;
@@ -105,73 +94,19 @@ async function fileToBase64(file){
   return btoa(bin);
 }
 
-// Keep requests under ~7.5M base64 chars (~5.6MB binary) to avoid mobile 400/500.
-const SAFE_TOTAL_BASE64 = 9_500_000;
-
-// Lossless PNG re-encode at same size
-async function pngReencodeSameSize(file){
-  const url = URL.createObjectURL(file);
-  const img = await new Promise((res, rej) => { const i=new Image(); i.onload=()=>res(i); i.onerror=rej; i.src=url; });
-  const c = document.createElement('canvas');
-  c.width = img.naturalWidth; c.height = img.naturalHeight;
-  c.getContext('2d').drawImage(img, 0, 0);
-  const dataURL = c.toDataURL('image/png'); // lossless
-  const base64  = dataURL.split(',')[1];
-  return { name: (file.name||'image').replace(/\.[^.]+$/,'') + '.png', contentType: 'image/png', data: base64 };
-}
-
-// Minimal downscale if still too big (keeps quality)
-async function mildDownscaleToLimit(file){
-  // start from full size; step down gently
-  let maxSide = 2400; // still high-res
-  for (let step=0; step<3; step++){
-    const url = URL.createObjectURL(file);
-    const img = await new Promise((res, rej) => { const i=new Image(); i.onload=()=>res(i); i.onerror=rej; i.src=url; });
-    let w = img.naturalWidth, h = img.naturalHeight;
-    if (w > h && w > maxSide) { h = Math.round(h * (maxSide / w)); w = maxSide; }
-    else if (h >= w && h > maxSide) { w = Math.round(w * (maxSide / h)); h = maxSide; }
-    const c = document.createElement('canvas');
-    c.width = w; c.height = h;
-    c.getContext('2d').drawImage(img, 0, 0, w, h);
-    // prefer PNG first; if still big, try gentle JPEG
-    let dataURL = c.toDataURL('image/png');
-    let base64  = dataURL.split(',')[1];
-    if (base64.length > SAFE_TOTAL_BASE64) {
-      dataURL = c.toDataURL('image/jpeg', 0.9); // high quality
-      base64  = dataURL.split(',')[1];
-      const name = (file.name||'image').replace(/\.[^.]+$/,'') + '.jpg';
-      if (base64.length <= SAFE_TOTAL_BASE64) return { name, contentType: 'image/jpeg', data: base64 };
-    } else {
-      const name = (file.name||'image').replace(/\.[^.]+$/,'') + '.png';
-      return { name, contentType: 'image/png', data: base64 };
-    }
-    maxSide = Math.max(1800, Math.round(maxSide * 0.85)); // one more gentle step if needed
-  }
-  // If we’re still above the limit, return the last high-quality JPEG anyway.
-  const url = URL.createObjectURL(file);
-  const img = await new Promise((res, rej) => { const i=new Image(); i.onload=()=>res(i); i.onerror=rej; i.src=url; });
-  const c = document.createElement('canvas');
-  const scale = 1800 / Math.max(img.naturalWidth, img.naturalHeight);
-  c.width = Math.round(img.naturalWidth * Math.min(1, scale));
-  c.height= Math.round(img.naturalHeight* Math.min(1, scale));
-  c.getContext('2d').drawImage(img, 0, 0, c.width, c.height);
-  const dataURL = c.toDataURL('image/jpeg', 0.88);
-  const base64  = dataURL.split(',')[1];
-  return { name: (file.name||'image').replace(/\.[^.]+$/,'') + '.jpg', contentType: 'image/jpeg', data: base64 };
-}
-
-// Prepare ONE file with minimal/no quality loss; only downsize if absolutely required.
-async function prepareOne(file){
-  // If original binary is ≤5MB it’s already safe → send original
-  if ((file.size || 0) <= 5 * 1024 * 1024) {
-    return { name: file.name, contentType: file.type || 'application/octet-stream', data: await fileToBase64(file) };
-  }
-  // Try lossless PNG re-encode at full size
-  const pngFull = await pngReencodeSameSize(file);
-  if (pngFull.data.length <= SAFE_TOTAL_BASE64) return pngFull;
-
-  // Still too big → do a gentle downscale
-  return await mildDownscaleToLimit(file);
+/* ---------- NEW: direct browser upload to transfer.sh (no secrets needed) ---------- */
+async function uploadDirect(file){
+  const mime = file.type || 'application/octet-stream';
+  const base = (file.name || 'image').replace(/[^\w.\-]+/g,'-').slice(0,100);
+  const name = base.replace(/\.[^.]+$/,'') + (/\.[^.]+$/.test(base)?'': (mime.includes('jpeg')?'.jpg': mime.includes('png')?'.png': '.bin'));
+  const res = await fetch(`https://transfer.sh/${encodeURIComponent(name)}`, {
+    method: 'PUT',
+    headers: { 'Content-Type': mime },
+    body: file
+  });
+  const text = (await res.text()).trim();
+  if (!res.ok || !/^https?:\/\//i.test(text)) throw new Error(`transfer.sh ${res.status} ${text}`);
+  return text;
 }
 
 /* ===================== MAIN RUN ===================== */
@@ -184,22 +119,37 @@ window.__run = async function(){
 
   const oldText = runBtn.textContent;
   runBtn.disabled = true; runBtn.textContent = 'Working…';
-  try {
-    // Prepare files individually; keeps originals unless they’d overflow the mobile limit
-    const prepared = await Promise.all(files.map(prepareOne));
 
-    // If multiple big files would overflow in one request, warn (Netlify request limit).
-    const totalBase64 = prepared.reduce((n,f)=>n+(f.data?.length||0),0);
-    if (totalBase64 > SAFE_TOTAL_BASE64) {
-      alert('These images together are too large to send in one request on mobile. Please send fewer images at once or choose smaller files.');
-      runBtn.textContent = oldText; runBtn.disabled = false; return;
+  try {
+    // 1) Try direct uploads (avoids Netlify request-size limit entirely)
+    let imageUrls = [];
+    let directOk = true;
+    for (const f of files) {
+      try { imageUrls.push(await uploadDirect(f)); }
+      catch (e) { directOk = false; log('Direct upload failed → fallback:', String(e)); break; }
     }
 
-    const payload = {
-      prompt: ((promptEl.value ?? '').toString().replace(/\u00A0/g,' ').trim()) || '.',
-      format: (formatEl.value || 'png').toLowerCase(),
-      files: prepared
-    };
+    // 2) Build payload: if direct worked, send only URLs. Otherwise send files (your original path).
+    let payload;
+    if (directOk) {
+      payload = {
+        prompt: ((promptEl.value ?? '').toString().replace(/\u00A0/g,' ').trim()) || '.',
+        format: (formatEl.value || 'png').toLowerCase(),
+        imageUrls
+      };
+      log('Using direct URLs:', imageUrls);
+    } else {
+      payload = {
+        prompt: ((promptEl.value ?? '').toString().replace(/\u00A0/g,' ').trim()) || '.',
+        format: (formatEl.value || 'png').toLowerCase(),
+        files: await Promise.all(files.map(async f => ({
+          name: f.name,
+          contentType: f.type || 'application/octet-stream',
+          data: await fileToBase64(f)
+        })))
+      };
+      log('Falling back to base64 payload.');
+    }
 
     const res = await fetch('/.netlify/functions/kie-create', {
       method: 'POST',
@@ -226,8 +176,7 @@ window.__run = async function(){
   }
 };
 
-/* (no extra bindings; the inline onclick calls __run) */
-log('BOOT: handler attached.');
+dbg.textContent += '\nBOOT: page parsed.\nBOOT: elements wired.\nBOOT: handler attached.';
 </script>
 </body>
 </html>
